--- a/style.css
+++ b/style.css
@@ -74,3 +74,15 @@ body {
 .wrapper .main_content .info div {
     margin-bottom: 20px;
 }
+
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: 15px 0px 15px 0px;
+}
+
+/* .first-gif, .second-gif, .third-gif, .fourth-gif, .fifth-gif {
+    margin: 0px 15px 0px 15px;
+} */
