--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    background-color: #f3f5f9;
+    background-color: #fff
 }
 
 .wrapper {
@@ -83,6 +83,54 @@ body {
     margin: 15px 0px 15px 0px;
 }
 
+.first-gif, .second-gif, .third-gif, .fourth-gif, .fifth-gif {
+    transform: translateY(0px);
+    opacity: 1;
+}
+
+.first-gif:hover, .second-gif:hover, .third-gif:hover, .fourth-gif:hover, .fifth-gif:hover {
+    transform: translateY(100px);
+    opacity: 0;
+    transition: 0.5s;
+}
+
 /* .first-gif, .second-gif, .third-gif, .fourth-gif, .fifth-gif {
-    margin: 0px 15px 0px 15px;
+background: rgba( 255, 255, 255, 0.25 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 4px );
+-webkit-backdrop-filter: blur( 4px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
 } */
+.info {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 1200px;
+    flex-wrap: wrap;
+    z-index: 1;
+}
+
+.card {
+    position: relative;
+    width: 280px;
+    height: 400px;
+    margin: 30px;
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.1);
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+}
+
+.card .content {
+    padding: 20px;
+    text-align: center;
+    transition: 0.5;
+}
